--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<title>JS Bin</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<div class="container-fluid">
 		
 
-		<div class="masterPage col-lg-2">
+		<div class="master-page col-lg-2">
 			<ul class="nav nav-pills nav-stacked">
  			 <li role="presentation" style="margin-top: 5px;" ><a href="#game-page">The Game</a></li>
  			 <li role="presentation"><a href="#help-page">Instruction</a></li>
@@ -42,21 +42,24 @@
 		</script>
 		
 		<script type="text/template" id="help-page">
-		
-		<h1>GAME INSTRUCTION</h1>
-			<P style="font-size: x-large"> at this game you need to click on the red square before he runs away
-				every time you caught him you will get 5 points!
-				<br>you need to do it fast,because every second he is free you will get -2 points.
-				<br>also be aware from the bad ugly blue square's,every click on them will give you extra -5 points.
-                <img></img>      
-				<br><br><br>GOOD LUCK!
-				</P>
+		<div class="help-page-class">
+			<div class="help-instruction">
+				<h1>GAME INSTRUCTION</h1>
+				<P> at this game you need to click on the red square before he runs away,
+					every time you caught him you will get 5 points!</p>
+				<p>you need to do it fast,because every second he is free you will get -2 points.</p>
+				<p>also be aware from the bad ugly blue square's,every click on them will give you extra -5 points.</p>
+			</div>
+       		 <div>
+        		<p>GOOD LUCK!</p>
+       		 </div>
+        </div>     
 		</script>
 		
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-		<script src="Page.js"></script>
-		<script src="thegame.js"></script>
-		<script src="main.js"></script>
+		<script src="js/thegame.js"></script>
+		<script src="js/page.js"></script>
+		<script src="js/main.js"></script>
 		
 	</body>
 </html>
